prjctr/monitoring: minor improvements

--- a/prjctr/monitoring/config/prometheus/prometheus.yml
+++ b/prjctr/monitoring/config/prometheus/prometheus.yml
@@ -25,6 +25,14 @@ scrape_configs:
     # scheme defaults to 'http'.
     static_configs:
       - targets: ["prometheus:9090"]
+  - job_name: app
+    scrape_interval: 5s
+    static_configs:
+      - targets: ["app:9090"]
+  - job_name: elasticsearch
+    scrape_interval: 5s
+    static_configs:
+      - targets: ["elasticsearch_exporter:9114"]
 
   - job_name: telegraf
     scrape_interval: 15s
