--- a/prjctr/monitoring/loadgen.yaml
+++ b/prjctr/monitoring/loadgen.yaml
@@ -5,11 +5,15 @@ jobs:
       request:
         method: POST
         path: http://localhost:8080/
-        body: '{ "key": {{random_alphanum 10}}, "value": {{random_alphanum 10}}, "db":"mongo"}'
+        headers:
+          Content-Type: application/json
+        body: '{ "key": "{{random_alphanum 10}}", "value": "{{random_alphanum 10}}", "db":"mongo"}'
   - type: http
     args:
       dynamic: true
       request:
         method: POST
         path: http://localhost:8080/
-        body: '{ "key": {{random_alphanum 10}}, "value": {{random_alphanum 10}}, "db":"elastic"}'
+        headers:
+          Content-Type: application/json
+        body: '{ "key": "{{random_alphanum 10}}", "value": "{{random_alphanum 10}}", "db":"elastic"}'
